<resources>
    <string name="app_name">TasksApp</string>
    <string name="tasks">tasks</string>
    <string name="example_number_0">0</string>
    <string name="example_number_22">22</string>
    <string name="example_day_name">Senin</string>
    <string name="example_month_name">Juni</string>
    <string name="default1">Default</string>
    <string name="today">Hari Ini</string>
    <string name="cancel">Batal</string>
    <string name="example_date">28/04/2024</string>
    <string name="ok">OK</string>
    <string name="x">x</string>
    <string name="default2">____</string>
    <string name="obd1_tx1">Mari ciptakan&#160;</string>
    <string name="obd1_tx2">ruang&#160;</string>
    <string name="obd1_tx3">untuk&#160;</string>
    <string name="obd1_tx4">alur kerja Anda.?</string>
    <string name="obd1_tx">Mari ciptakan ruang untuk alur kerja Anda.</string>
    <string name="obd1_manage_tasks">Manajemen Tugas</string>
    <string name="obd1_next">Lewati</string>
    <string name="obd2_tx1">Bekerja lebih</string>
    <string name="obd2_tx2">terstruktur&#160;</string>
    <string name="obd2_tx3">dan&#160;</string>
    <string name="obd2_tx4">Terorganisir👌</string>
    <string name="obd2_tx">Bekerja lebih terstruktur dan terorganisir👌</string>
    <string name="obd3_tx1">Kelola tugas&#160;</string>
    <string name="obd3_tx2">cepat&#160;</string>
    <string name="obd3_tx3">untuk&#160;</string>
    <string name="obd3_tx4">hasil Maksimal ✌</string>
    <string name="obd3_tx">Kelola tugas cepat untuk hasil Maksimal✌</string>
    <string name="lgn_login">Masuk</string>
    <string name="lgn_wellcome">Selamat Datang</string>
    <string name="lgn_description">Silakan masukkan alamat email dan kata sandi untuk Masuk</string>
    <string name="lgn_email">Email</string>
    <string name="lgn_password">Kata Sandi</string>
    <string name="lgn_forgot_password">Lupa Sandi?</string>
    <string name="lgn_with">Masuk dengan</string>
    <string name="lgn_not_register">Belum terdaftar?&#160;</string>
    <string name="reg_register">Daftar</string>
    <string name="reg_name">Nama</string>
    <string name="reg_title">Buat Akun</string>
    <string name="reg_description">Silakan masukkan informasi Anda dan buat akun Anda</string>
    <string name="reg_with">Daftar</string>
    <string name="reg_have_account">Sudah punya akun?&#160;</string>
    <string name="hom_example_date">Selasa, 21 April 2024</string>
    <string name="hom_example_name">Andi</string>
    <string name="hom_team">Tim</string>
    <string name="hom_goal">Goals</string>
    <string name="hom_hello">Halo&#160;</string>
    <string name="hom_wishes">Semoga harimu menyenangkan!</string>
    <string name="hom_search">Cari</string>
    <string name="hom_daily_task">Tugas Harian</string>
    <string name="adp_progress_example_title">Belajar Laravel</string>
    <string name="adp_progress_progress">Progress</string>
    <string name="adp_example_example_users">2 Lainnya</string>
    <string name="adp_task_example_title">Tugas 1</string>
    <string name="adp_task_example_description">Mengerjakan Kuis</string>
    <string name="adp_task_hyphen">-</string>
    <string name="adp_task_time">07:00</string>
    <string name="detask_example_title">Desain UI</string>
    <string name="detask_completion_date">Tanggal selesai</string>
    <string name="detask_example_date">23/04/2024</string>
    <string name="detask_example_role">Manager</string>
    <string name="detask_example_user">Budi Nam</string>
    <string name="detask_description">Deskripsi</string>
    <string name="detask_example_description">Antarmuka Pengguna (UI) adalah titik interaksi antara manusia dan mesin dalam perangkat lunak atau perangkat keras, memungkinkan pengguna berinteraksi dengan sistem secara efisien.</string>
    <string name="detask_team">Anggota Tim</string>
    <string name="detask_progress">Progress</string>
    <string name="detask_sub_assignment">Sub-tugas</string>
    <string name="detask_example_progress">20%</string>
    <string name="detask_example_sub_title">Tugas 1</string>
    <string name="detask_example_sub_description">Mengerjakan Kuis</string>
    <string name="member_team">0 Anggota</string>
    <string name="member_add_team">Tambah Anggota</string>
    <string name="member_out">Keluar dari tim</string>
    <string name="addmem_finish">Selesai</string>
    <string name="hmaddtask_task_title">Tugas</string>
    <string name="hmaddtask_task_description">Aktivitas sekali selesai dan tidak perlu pelacakan waktu progres.</string>
    <string name="hmaddtask_repetitive_title">Tugas Berulang</string>
    <string name="hmaddtask_repetitive_description">Aktivitas berkala yang dijadwalkan ulang otomatis tanpa pemantauan progres.</string>
    <string name="hmaddtask_habit_title">Kebiasaan</string>
    <string name="hmaddtask_habit_description">Aktivitas yang berulang seiring waktu dengan pelacakan dan statistik.</string>
    <string name="hmaddtask_goal_title">Goals</string>
    <string name="hmaddtask_goal_description">Aktivitas dengan pencapaian dalam jangka waktu tertentu yang terpantau.</string>
    <string name="hmaddtask_teams_title">Proyek Tim</string>
    <string name="hmaddtask_teams_description">Memudahkan kolaborasi dan pelacakan progres tugas secara efisien..</string>
    <string name="newtask_task_title">Tugas Baru</string>
    <string name="newtask_repet_title">Tugas Berulang</string>
    <string name="newtask_task_name">Nama Tugas</string>
    <string name="newtask_description_name">Deskripsi (Opsional)</string>
    <string name="newtask_add_sub">Tambahkan sub-tugas</string>
    <string name="newtask_reminder">Pengingat</string>
    <string name="newtask_priority">Prioritas</string>
    <string name="newtask_postpone">Tunda Tugas</string>
    <string name="newtask_frec_task">Frekuensi Pengerjaan</string>
    <string name="newtask_radio_daily">Tiap hari</string>
    <string name="newtask_radio_weekly">Hari tertentu dalam seminggu</string>
    <string name="newtask_day_monday">Senin</string>
    <string name="newtask_day_tuesday">Selasa</string>
    <string name="newtask_day_wednesday">Rabu</string>
    <string name="newtask_day_thursday">Kamis</string>
    <string name="newtask_day_friday">Jumat</string>
    <string name="newtask_day_saturday">Sabtu</string>
    <string name="newtask_day_sunday">Minggu</string>
    <string name="newtask_radio_monthly">Tangggal tertentu dalam sebulan</string>
    <string name="newtask_date_label">Tanggal</string>
    <string name="newtask_monthly_label">tiap bulan</string>
    <string name="newtask_yearly_label">tiap tahun</string>
    <string name="newtask_yearly_empty">____</string>
    <string name="newtask_calendar_icon_desc">Pilih tanggal</string>
    <string name="newtask_radio_yearly">Tanggal tertentu dalam setahun</string>
    <string name="newtask_radio_activity">Siklus aktivitas-istirahat</string>
    <string name="newtask_aktivitas">Aktivitas</string>
    <string name="newtask_istirahat">Istirahat</string>
    <string name="newtask_hari">hari</string>
    <string name="newtask_date_start">Tanggal Mulai</string>
    <string name="newtask_date_end">Tanggal Selesai</string>
    <string name="newtask_add_member">+ Tambah Anggota</string>
    <string name="newtask_create_task">+ Buat Tugas</string>
    <string name="newrep_title">Kebiasaan Baru</string>
    <string name="newrep_yes_no">Ya atau Tidak</string>
    <string name="newrep_numeric">Nilai numerik</string>
    <string name="newrep_total">Jumlah</string>
    <string name="newrep_activity_day">aktivitas dalam sehari</string>
    <string name="goal_title">Goals Baru</string>
    <string name="goal_name">Goals Baru</string>
    <string name="newtask_select_date">Pilih Waktu</string>
    <string name="newtask_task_add_member">Tambah Anggota</string>
    <string name="dlprio_title">Tentukan Prioritas</string>
    <string name="dlprio_description">Prioritas tertinggi akan diletakkan paling atas dalam list</string>
    <string name="dlliter_title">Literasi</string>
    <string name="dlliter_date">Literasi</string>
    <string name="dlliter_today">Hari ini</string>
    <string name="dlliter_numeric_1">1</string>
    <string name="dlliter_numeric_slice">/</string>
    <string name="dlliter_numeric_2">2</string>
    <string name="assignment_title">List Tugas</string>
    <string name="assignment_task">Tugas</string>
    <string name="assignment_repetitive_task">Tugas Berulang</string>
    <string name="assignment_habitual_task">Kebiasaan</string>
    <string name="assignment_day">Sel - Kam</string>
    <string name="assignment_date">Tanggal 15, 18</string>
    <string name="prof_my_profile">Profil Saya</string>
    <string name="prof_edit">Edit</string>
    <string name="prof_settings">Pengaturan</string>
    <string name="prof_friends">Teman</string>
    <string name="prof_support">Support</string>
    <string name="prof_share">Berbagi</string>
    <string name="prof_about_us">Tentang Kami</string>
    <string name="prof_logout">Keluar</string>
    <string name="edprof_edit_profile">Edit Profil</string>
    <string name="edprof_done">Selesai</string>
    <string name="edprof_name">Nama</string>
    <string name="edprof_username">Nama Pengguna</string>
    <string name="edprof_phone_number">Nomor Telepon</string>
    <string name="edprof_email">Email</string>
    <string name="sett_settings">Pengaturan</string>
    <string name="sett_setting_task">Pengaturan Tugas</string>
    <string name="sett_notification">Notifikasi</string>
    <string name="sett_theme">Tema</string>
    <string name="sett_sync">Sinkronisasi</string>
    <string name="sett_backup">Pencadangan</string>
    <string name="sett_language">Bahasa</string>
    <string name="newproj_title">Proyek Baru</string>
    <string name="detgo_ended">Berakhir:</string>
    <string name="detgo_target">Target</string>
    <string name="detgo_target_empty">Belum ada target</string>
    <string name="settask_task_settings">Pengaturan Tugas</string>
    <string name="settask_sorting_options">Opsi Pengurutan</string>
    <string name="settask_first">Pertama</string>
    <string name="settask_first_priority">Dari prioritas</string>
    <string name="settask_second">Kedua</string>
    <string name="settask_second_time">Dari waktu</string>
    <string name="settask_task_location_done">Letak Tugas Selesai</string>
    <string name="settask_move_to_bottom">Pindah ke bawah</string>
    <string name="settask_text_size">Ukuran teks</string>
    <string name="settask_default_size">Asli</string>
    <string name="settask_show_priority">Tampilkan prioritas</string>
    <string name="img_checker_square">Image Checker Square</string>
    <string name="img_obd1">Image Onboarding 1</string>
    <string name="img_obd2">Image Onboarding 1</string>
    <string name="img_obd3">Image Onboarding 1</string>
    <string name="img_next_obd">Image Next Onboarding</string>
    <string name="img_select_obd">Image Selected Onboarding</string>
    <string name="img_not_select_obd">Image Not Selected Onboarding</string>
    <string name="img_ic_search">Icon Search</string>
    <string name="img_back">Back Button</string>
    <string name="img_more">More Button</string>
    <string name="img_add">Icon Add</string>
    <string name="img_bg_progress">Icon Add</string>
    <string name="img_calendar">Icon Calendar</string>
    <string name="img_user1">Image User 1</string>
    <string name="img_logout">Image Out</string>
    <string name="img_user2">Image User 2</string>
    <string name="img_apple">Apple Logo</string>
    <string name="img_circle_check">Icon Circle Check</string>
    <string name="img_circle_repetitive">Icon Circle Repetitive</string>
    <string name="img_circle_habit">Icon Circle Habit</string>
    <string name="img_plus">Icon Plus</string>
    <string name="img_minus">Icon Minus</string>
    <string name="img_google">Google Logo</string>
</resources>