<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:paddingHorizontal="@dimen/default_margin_2"
    android:paddingVertical="@dimen/default_margin"
    tools:context=".presentation.login.LoginFragment">

    <ImageButton
        android:id="@+id/lgn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:contentDescription="@string/img_back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lgn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/lgn_login"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/lgn_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/img_checker_square"
        android:src="@drawable/ic_check_square"
        android:tint="@color/purple_deep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lgn_title" />

    <TextView
        android:id="@+id/lgn_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins"
        android:text="@string/lgn_wellcome"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lgn_logo" />

    <TextView
        android:id="@+id/lgn_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lgn_description"
        android:textColor="@color/gray_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lgn_welcome"
        app:layout_constraintWidth_percent="0.8" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lgn_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/lgn_email"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeColor="@color/purple_deep"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/lgn_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lgn_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lgn_pass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/lgn_password"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeColor="@color/purple_deep"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/lgn_email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lgn_pass_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:includeFontPadding="false"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lgn_forgot_pass"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:includeFontPadding="false"
        android:letterSpacing="0.05"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/lgn_forgot_password"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/purple_deep"
        android:textStyle="bold"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="@id/lgn_pass_input"
        app:layout_constraintTop_toBottomOf="@id/lgn_pass_input" />

    <Button
        android:id="@+id/lgn_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_deep"
        android:fontFamily="@font/poppins"
        android:text="@string/lgn_login"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/lgn_forgot_pass" />

    <TextView
        android:id="@+id/lgn_with"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter"
        android:text="@string/lgn_with"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/lgn_btn_login" />

    <LinearLayout
        android:id="@+id/lgn_line_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lgn_with">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="14dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray_stroke">

            <ImageButton
                android:id="@+id/lgn_login_apple"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/img_apple"
                android:src="@drawable/ic_apple" />

        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"
            android:background="@android:color/transparent" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="14dp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray_stroke">

            <ImageButton
                android:id="@+id/lgn_login_google"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/img_google"
                android:src="@drawable/ic_google" />

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lgn_line_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/lgn_not_register"
            android:textColor="@color/gray_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/reg_register"
            android:textColor="@color/purple_deep"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>