<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:paddingHorizontal="@dimen/default_margin_2"
    android:paddingVertical="@dimen/default_margin"
    tools:context=".presentation.home.HomeFragment">

    <TextView
        android:id="@+id/hom_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/hom_example_date"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hom_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_margin"
        android:fontFamily="@font/inter"
        android:text="@string/hom_hello"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hom_date" />

    <TextView
        android:id="@+id/hom_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_margin"
        android:fontFamily="@font/inter"
        android:text="@string/hom_example_name"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/hom_hello"
        app:layout_constraintTop_toBottomOf="@id/hom_date" />

    <TextView
        android:id="@+id/hom_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/hom_wishes"
        android:textColor="@color/gray_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hom_name" />

</androidx.constraintlayout.widget.ConstraintLayout>